# api-server/controllers/Default.js
@@ -18,7 +18,7 @@ function _sendError(error, res) {
   res.end();
 }
 
-module.exports.getBooks = function getBooks (req, res, next) {
+module.exports.getBooks = function getBooks(req, res, next) {
   ebmgr.getBooks()
     .then(result => {
       res.status(200);
@@ -28,7 +28,7 @@ module.exports.getBooks = function getBooks (req, res, next) {
     .catch(error => _sendError(error, res));
 };
 
-module.exports.getBookThumbnail = function getBookThumbnail (req, res, next, vpath) {
+module.exports.getBookThumbnail = function getBookThumbnail(req, res, next, vpath) {
   ebmgr.getBookThumbnail(vpath)
     .then(thumb => {
       if (!thumb) {
@@ -43,7 +43,7 @@ module.exports.getBookThumbnail = function getBookThumbnail (req, res, next, vpa
     .catch(error => _sendError(error, res));
 };
 
-module.exports.setStar = function setStar (req, res, next) {
+module.exports.setStar = function setStar(req, res, next) {
   const starState = req.body.star;
   const vpath = _getPathParam(req, 'vpath');
   if (starState === undefined) {
@@ -55,6 +55,16 @@ module.exports.setStar = function setStar (req, res, next) {
   ebmgr.setStar(vpath, starState ? true : false)
     .then(result => {
       res.status(200);
+      res.end();
+    })
+    .catch(error => _sendError(error, res));
+};
+
+module.exports.getDirectories = function getDirectories (req, res, next) {
+  ebmgr.getDirectories()
+    .then(result => {
+      res.status(200);
+      res.json(result);
       res.end();
     })
     .catch(error => _sendError(error, res));
